--- a/css/style.css
+++ b/css/style.css
@@ -4,11 +4,6 @@
     margin: 0%;
 }
 
-header {
-    position: fixed;
-
-}
-
 nav {
     list-style-type: none;
     float: right;
@@ -17,9 +12,11 @@ nav {
 li{
     display: inline-block;
     background-color: white;
-    padding: 15px;
-    border-radius: 25px;
-    margin: 20px 10px;
+    padding: 10px 15px;
+    font-size: 1em;
+    border-radius: 50%;
+    margin: 10px 5px;
+    border: 1px solid rgb(238, 236, 236);
 }
 
 li>a {
@@ -74,6 +71,7 @@ li>a {
 .description-img {
     text-align: center;
     color: yellow;
+    text-transform: uppercase;
 }
 
 .description-img-3 {
